Changelog (English)
===================

1.5.1
Added support for installation type in RAM
Updated command "status"
Updated security groups
Added fix for tty0 (use X options: "-sharevts vt0")
Translated into German
Translated into Italian

1.5.0
Added support for devices with an Intel architecture
Added support for cross-architecture installation x86 <-> ARM based on QEMU (binfmt_misc require support in the kernel)
Updated built-in BusyBox to version 1.23.0 (builds with PIE and without PIE)
Added support Ubuntu 15.04 (Vivid Vervet)
Added suits kali-dev and kali-rolling in Kali Linux
Bugfix "Couldn't find these debs: 0"
Fixed Gentoo installation problems
Updated linuxdeploy shell

1.4.9
Added support for third-party BusyBox (required /system/xbin/ash)
Added support Ubuntu 14.10 (Utopic Unicorn)
Added support arm64/aarch64 for some distributions

1.4.8
Added support Android 5 (PIE support)
Added support Fedora 21 (armhfp only)
Fixed LD_PRELOAD errors

1.4.7
Fixed packages list of Arch Linux (issue #161)
Fixed error with VNC_ARGS (issue #153)
User root is added to the group aid_inet be default (ticket #135)
Takes into account changes in openSUSE repository (ticket #154)
Save and restore SELinux state (ticket #167)

1.4.6
Added option to disable the built-in shell
Operating environment by default: /data/data/ru.meefik.linuxdeploy/linux
Added sync in framebuffer
Added ACCESS_SUPERUSER permission
Fixed packages list of Arch Linux (issue #136)
Fixed packages list of openSUSE

1.4.5
Added support SELinux
BusyBox dynamically linked (fixed DNS resolver)
Added support Ubuntu 14.04 (Trusty Tahr)
Fixed X Window System startup
Fixed dbus configuration

1.4.4
Added support Fedora 20 (armhfp)
Added VNC options
Bugs fixed
Fixed broken packages in Arch Linux

1.4.3
Added support Ubuntu 13.10 (Saucy Salamander)
Added three modes Android UI freeze
Added autostart dbus in X-server mode and framebuffer
Added an property "X options" for framebuffer