@@ -4,11 +4,12 @@ import android.content.BroadcastReceiver;
 import android.content.Context;
 import android.content.Intent;
 
-public class BootUpReceiver extends BroadcastReceiver {
+public class BootupReceiver extends BroadcastReceiver {
 
 	@Override
 	public void onReceive(final Context context, Intent intent) {
-		Intent service = new Intent(context, BootUpService.class);
+		Intent service = new Intent(context, ExecService.class);
+		service.putExtra("command", "start");
 		context.startService(service);
 	}
 
